# maison-marcelina

./: .env.example  .gitignore  AGENTS.md  README.md  lesson.md  plan.md  start.sh
backend/: README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: account.py  auth.py  catalog.py  checkout.py
backend/src/app/core/: config.py  logging.py
backend/src/app/services/: stripe_checkout.py  supabase_account.py  supabase_auth.py  supabase_catalog.py
backend/tests/: test_account.py  test_auth.py  test_catalog.py  test_checkout.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/ui/: button.tsx  carousel.tsx  footer-7.tsx  gallery4.tsx  login-1.tsx  lumina-interactive-list.tsx
frontend/src/lib/: auth.ts  catalog.ts  checkout.ts
ressources/: maison-marcelina.md
