[project]
name = "app-template-backend"
version = "0.1.0"
description = "Backend API template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "httpx>=0.28.0,<0.29.0",
  "supabase>=2.28.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<0.36.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
